Added styling for '/admin/manage-tag.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-tag.html
+++ b/BeginnersPad v2/admin/manage-tag.html
@@ -110,7 +110,7 @@
 
     <h3 class="section-title">Manage tag - <span class="lowercase">#tagname</span></h3>
 
-    <section class="section-tag">
+    <section class="section-tag" id="sectionTag">
         <div class="container">
             <div class="panel-grp">
                 <div class="panel">
