--- a/BeginnersPad v2/admin/view-tickets.html
+++ b/BeginnersPad v2/admin/view-tickets.html
@@ -108,17 +108,19 @@
         </div>
     </div>
 
+    <h3 class="section-title">Help tickets</h3>
+
     <section id="sectionTable">
         <div class="container">
             <div class="container-btn-dropdown multi">
                 <a class="btn btn-link" href="/view-topics.html">Help tickets</a>
                 <select class="btn-dropdown">
-                    <option value="" selected>No filters</option>
-                    <option value="">Assigned to admin1</option>
-                    <option value="">Assigned to admin2</option>
-                    <option value="">Assigned to admin3</option>
-                    <option value="">Assigned to admin4</option>
-                    <option value="">Assigned to admin5</option>
+                    <option value="" selected>-- asigned to --</option>
+                    <option value="">admin1</option>
+                    <option value="">admin2</option>
+                    <option value="">admin3</option>
+                    <option value="">admin4</option>
+                    <option value="">admin5</option>
                 </select>
             </div>
             
