Added HTML markup for '.btn-dropdown-grp' to '/admin/view-ticket.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/view-ticket.html
+++ b/BeginnersPad v2/admin/view-ticket.html
@@ -133,7 +133,18 @@
                             Necessitatibus fugit qui a nobis ipsam error molestias autem eum reprehenderit nemo pariatur voluptatem, maiores
                             eaque alias mollitia. Eveniet quaerat et corrupti inventore accusamus optio sequi neque repellendus? Facere
                             perferendis dolor quaerat fugit ipsam cupiditate. Nobis ipsum impedit modi ut quasi. Eveniet eum enim dolores id
-                            excepturi. Culpa numquam porro aliquid in. Quasi, reiciendis. Neque.</p>
+                            excepturi. Culpa numquam porro aliquid in. Quasi, reiciendis. Neque.
+                        </p>
+                    </div>
+                    <div class="container-btn-dropdown multi">
+                        <div class="btn-dropdown-grp">
+                            <button class="btn-dropdown">Actions <i class="fas fa-chevron-down"></i></button>
+                            <div class="btn-dropdown-items">
+                                <div class="item">Release ticket</div>
+                                <div class="item">Close as 'resolved'</div>
+                                <div class="item">Close ticket</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
