--- a/BeginnersPad v2/admin/view-ticket.html
+++ b/BeginnersPad v2/admin/view-ticket.html
@@ -139,7 +139,7 @@
                     <div class="container-btn-dropdown multi">
                         <div class="btn-dropdown-grp">
                             <button class="btn-dropdown">Actions <i class="fas fa-chevron-down"></i></button>
-                            <div class="btn-dropdown-items">
+                            <div class="btn-dropdown-items open">
                                 <div class="item">Release ticket</div>
                                 <div class="item">Close as 'resolved'</div>
                                 <div class="item">Close ticket</div>
