Added additional JavaScript logic for '.btn-dropdown-grp' in 'css-base.js' plus styling in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/view-ticket.html
+++ b/BeginnersPad v2/admin/view-ticket.html
@@ -137,8 +137,8 @@
                         </p>
                     </div>
                     <div class="container-btn-dropdown multi">
-                        <div class="btn-dropdown-grp" id="btnDropGrp1">
-                            <button class="btn-dropdown">Actions <i class="fas fa-chevron-down"></i></button>
+                        <div class="btn-dropdown-grp">
+                            <button class="btn-dropdown" id="btnDropGrp1">Actions <i class="fas fa-chevron-down"></i></button>
                             <div class="btn-dropdown-items" id="listDropGrp1">
                                 <div class="item">Release ticket</div>
                                 <div class="item">Close as 'resolved'</div>
