Added '/admin/manage-tickets-log.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/view-tickets.html
+++ b/BeginnersPad v2/admin/view-tickets.html
@@ -113,7 +113,7 @@
     <section id="sectionTable">
         <div class="container">
             <div class="container-btn-dropdown multi">
-                <a class="btn btn-link" href="/view-topics.html">Help topics</a>
+                <a class="btn btn-link" href="/admin/manage-topics.html">Help topics</a>
                 <select class="btn-dropdown">
                     <option value="" selected>-- asigned to --</option>
                     <option value="">admin1</option>
