Added '/admin/manage-help-categories.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/view-tickets.html
+++ b/BeginnersPad v2/admin/view-tickets.html
@@ -116,6 +116,7 @@
                 <a class="btn btn-link" href="/admin/manage-topics.html">Help topics</a>
                 <select class="btn-dropdown">
                     <option value="" selected>-- asigned to --</option>
+                    <option value="">me</option>
                     <option value="">admin1</option>
                     <option value="">admin2</option>
                     <option value="">admin3</option>
