Changed references to '/admin/manage-tags.html' in the .nav 'Help & tickets' section to '/admin/manage-faqs.html' in all '/admin/' files in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/dashboard.html
+++ b/BeginnersPad v2/admin/dashboard.html
@@ -95,7 +95,7 @@
                 <li><a href="view-tickets.html">View tickets</a></li>
                 <li><a href="/admin/manage-tickets-log.html">Ticket management log</a></li>
                 <li><a href="/admin/manage-help-categories.html">Manage help categories</a></li>
-                <li><a href="/admin/manage-tags.html">Manage FAQs</a></li>
+                <li><a href="/admin/manage-faqs.html">Manage FAQs</a></li>
             </ul>
         </div>
         <div class="nav-drawer-category">
