Added logic to '/js/charts-admin-dashboard.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/dashboard.html
+++ b/BeginnersPad v2/admin/dashboard.html
@@ -377,7 +377,7 @@
                 </div>
                 <div class="charts">
                     <div class="chart">
-                        <canvas id="chartDashListerRating" width="250" height="300"></canvas>
+                        <canvas id="chartDashAdminRating" width="250" height="300"></canvas>
                     </div>
                 </div>
             </div>
@@ -527,7 +527,7 @@
                 </div>
                 <div class="charts">
                     <div class="chart">
-                        <canvas id="chartDashListerFavs" width="250" height="300"></canvas>
+                        <canvas id="chartDashAdminFavs" width="250" height="300"></canvas>
                     </div>
                 </div>
             </div>
@@ -535,7 +535,7 @@
     </section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.js"></script>
-    <script src="/js/charts-lister-dashboard.js"></script>
+    <script src="/js/charts-admin-dashboard.js"></script>
     <script src="/js/nav-drawer.js"></script>
     <script src="/js/css-base.js"></script>
 </body>
